[tool.poetry]
name = "eemeter"
version = "3.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
matplotlib = "*"
statsmodels = "*"
scipy = "*"
pandas = ">=1.0.0"


[tool.poetry.group.dev.dependencies]
sqlalchemy = "*"
eeweather = ">=0.3.12"
black = "*"
coverage = "*"
jupyterlab = "*"
nbsphinx = "*"
pytest = "*"
pytest-cov = "*"
pytest-profiling = "*"
pytest-xdist = "*"
snapshottest = "==0.6.0"
sphinx = "*"
sphinx-autobuild = "*"
sphinxcontrib-spelling = "*"
tox = "*"
twine = "*"
typing = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
